# rosshield

./: .dockerignore  .editorconfig  .gitignore  .golangci.yml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  E19_WEB_UI_GUIDE.md  LICENSE  LICENSE-ENTERPRISE  Makefile  NOTICE  README.md  SECURITY.md  SESSION_HANDOFF.md  go.mod  go.sum  tools.go
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release-pipeline.yml  release.yml  snap-build.yml  snap-smoke.yml
cmd/pack-tools/: main.go
cmd/rosshield-audit-verify/: README.md  export_verify.go  export_verify_test.go  fixture_gen_test.go  main.go  main_test.go  rotation.go  rotation_test.go
cmd/rosshield-server/: admin_seed.go  admin_seed_test.go  api_routing_test.go  audit_hash_transition.go  audit_rotation_backend.go  backup.go  backup_handler.go  backup_handler_test.go  backup_scheduler.go  backup_scheduler_test.go  backup_test.go  bootstrap.go  bootstrap_test.go  chainkey_rotation.go  demo_seed.go  demo_seed_test.go  (+26 more)
docs/: PHASE2_EXIT_DEMO.md  PHASE3_EXIT_DEMO.md
openapi/: openapi.yaml
run-data/: data.db-shm  data.db-wal
scripts/: compose-smoke.sh  dev-pack-signer.pub.hex  phase2-exit-smoke.sh  release-pack-signer.pub.hex
snap/: snapcraft.yaml
web/: .gitignore  README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  postcss.config.js  tailwind.config.ts  tsconfig.node.json  vite.config.ts  vitest.config.ts
web/src-tauri/: Cargo.toml  README.md  tauri.conf.json
web/src-tauri/src/: main.rs
(+2508 files in other folders)
