[package]
name = "rosshield-desktop"
version = "0.1.0"
description = "rosshield desktop shell (Tauri 2.x — D3)"
authors = ["rosshield Contributors"]
license = "Apache-2.0"
repository = "https://github.com/ssabro/rosshield"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "rosshield_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.0" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.0" }
tauri-plugin-log = "2"
